# VR_exp_ROS

./: .gitignore  README.md  network-setup.sh
dist_autonomy/: CMakeLists.txt  package.xml
dist_autonomy/msg/: Target_dist.msg  object_position.msg
dist_autonomy/src/: obj_detect_dist.py  plot_dist.py  pub_grid.py  pub_obj.py  visual_occlusion.cpp
rt_ergodic_control/rt_erg_lib/: agent.py  ergodic_control.py
user_input/: CMakeLists.txt  package.xml
user_input/msg/: input_array.msg  person_position.msg  player_info.msg  save_data.cpp  treasure_info.msg
user_input/src/: client.cpp  save_data.cpp  test_publish.cpp
vr_exp_ros/: CMakeLists.txt  package.xml  setup.py
vr_exp_ros/launch/: run_directcontrol_experiment.launch  run_ergodic_experiment.launch  run_experiment.launch  run_nocontrol_experiment.launch  run_waypointcontrol_experiment.launch  test_comm.launch  test_sim.launch
vr_exp_ros/msg/: ExampleMessage.msg  VR_dist.msg
vr_exp_ros/scripts/: direct_control_swarm.py  main.py  swarm_listener.py
vr_exp_ros/src/: main.py  swarm_listener.py  waypoint_control_swarm.py
